tests/ifcc-test-output/testfiles-if_then_else_while_for-break_error/gcc-compile.txt
input.c:4:5: error: 'break' statement not in loop or switch statement
    break;
    ^
1 error generated.

return code: 1
